--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 run-name: ${{ github.actor }} workflow test
-on: [push]
+on:
+  push:
+    branches:
+      - staging
 jobs:
   testJob:
     runs-on: ubuntu-latest
