--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ run-name: ${{ github.actor }} workflow test
 on:
   push:
     branches:
-      - staging
+      - "*"
 jobs:
   testJob:
     runs-on: ubuntu-latest
@@ -21,3 +21,5 @@ jobs:
             creds: '${{secrets.AZURE_CREDENTIALS}}'
       - name: Test azure login by getting details
         run: az account show
+      - name: Deploy the jobs
+        run: az ml job create –file job.yaml –resource-group assignment2-b00903995 --workspace-name  
