--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
             creds: '${{secrets.AZURE_CREDENTIALS}}'
       - name: Test azure login by getting details
         run: az account show
+      - name: Add ML Extension
+        run: az extension add --name ml
       - name: Deploy the jobs
-        run: az ml job create –file job.yaml –resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+        run: az ml job create –-file job.yaml -–resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
