--- a/job.yaml
+++ b/job.yaml
@@ -6,6 +6,6 @@ inputs:
     type: uri_file
     path: azureml:Har-dataset:1
 environment: azureml://registries/azureml/environments/sklearn-1.1/versions/14
-compute: practical6-compute
+compute: azureml:compute-resources
 experiment_name: experiment-1-test
 description: First test of a job being posted for the assignment.
