--- a/job.yaml
+++ b/job.yaml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: .
-command: python model.py --trainingdata ${{ inputs.training_data }}
+command: python main.py --trainingdata ${{ inputs.training_data }}
 inputs:
   training_data:
     type: uri_file
