add pull request code

--- a/.github/workflows/federated_learning_server_staging.yml
+++ b/.github/workflows/federated_learning_server_staging.yml
@@ -5,6 +5,11 @@ on:
       - "staging"
     paths:
       - '/federated_learning/**'
+  pull_request:
+    branches:
+      - "staging"
+    paths:
+      - '/federated_learning/**'
 jobs:
   testJob:
     runs-on: ubuntu-latest
