--- a/train_random_forest/job.yaml
+++ b/train_random_forest/job.yaml
@@ -8,4 +8,4 @@ inputs:
 environment: azureml://registries/azureml/environments/sklearn-1.1/versions/14
 compute: azureml:compute-resources
 experiment_name: experiment-1-test
-description: First test of a job being posted for the assignment.
+description: First test of a job being posted for the assignment...
