--- a/.github/workflows/federated_learning_server_staging.yml
+++ b/.github/workflows/federated_learning_server_staging.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - "staging"
+    paths:
+      - '../../federated_learning/**'
   pull_request:
     branches:
       - "staging"
+    paths:
+      - '../../federated_learning/**'
 jobs:
   testJob:
     runs-on: ubuntu-latest
@@ -27,4 +31,4 @@ jobs:
       - name: Add ML Extension
         run: az extension add --name ml
       - name: Deploy the jobs
-        run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yaml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+        run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
