--- a/federated_learning/server/server_job_staging.yml
+++ b/federated_learning/server/server_job_staging.yml
@@ -8,4 +8,4 @@ inputs:
 environment: azureml://locations/westeurope/workspaces/d208efad-40c5-4644-a94f-9c0ee8d073c6/environments/development/versions/3
 compute: azureml:compute-resources
 experiment_name: Fed-Learning-Server-Staging-Env
-description: This job is for deploying and running the federated learning server in the dev environment....
+description: This job is for deploying and running the federated learning server in the dev environment.
