--- a/federated_learning/server/server_job_testing.yml
+++ b/federated_learning/server/server_job_testing.yml
@@ -9,3 +9,6 @@ environment: azureml://locations/westeurope/workspaces/d208efad-40c5-4644-a94f-9
 compute: azureml:compute-resources
 experiment_name: Fed-Learning-Server-Dev-Env
 description: This job is for deploying and running the federated learning server in the dev environment
+extraFiles:
+  - path: ./path/to/utils.py
+    name: utils.py
