--- a/.github/workflows/deploy_to_compute.yml
+++ b/.github/workflows/deploy_to_compute.yml
@@ -55,3 +55,6 @@ jobs:
     - name: Check container exists
       run: |
         docker container ls -a
+    - name: DOCKER PS
+      run: |
+          docker ps -a
