--- a/.github/workflows/deploy_to_compute.yml
+++ b/.github/workflows/deploy_to_compute.yml
@@ -33,14 +33,24 @@ jobs:
 
     - name: List images in ACR
       run: az acr repository list --name d208efad40c54644a94f9c0ee8d073c6 --output table
-   
+    
+    - name: Set up SSH key
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+        eval "$(ssh-agent -s)"
+        ssh-add private_key.pem
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.COMPUTE_INSTANCE_SSH_KEY }}
+
+
     - name: SSH into Azure ML Compute Instance
       run: |
-        ssh -i ${{secrets.COMPUTE_INSTANCE_SSH_KEY}} azureuser@40.113.153.115 -p 50000
+        ssh -i ${{ secrets.COMPUTE_INSTANCE_SSH_KEY }} azureuser@40.113.153.115 -p 50000
     - name: Pull Docker Image
       run: |
-          docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
-          
+          docker pull ${{ secrets.CONTAINER_REGISTRY_URL}}/com774:server-build
+
     - name: Run Docker Container
       run: |
         docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
