--- a/.github/workflows/deploy_to_compute.yml
+++ b/.github/workflows/deploy_to_compute.yml
@@ -42,10 +42,11 @@ jobs:
         key: ${{ secrets.COMPUTE_INSTANCE_SSH_KEY }}
         port: 50000
         script: |
-          - name: Setup Azure CLI
+            # Setup Azure CLI
             uses: azure/login@v1
             with:
               creds: ${{ secrets.AZURE_CREDENTIALS }}
+            
             docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
             docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build python server.py --trainingdata combined_data_sub1-9
             docker container ls -a
