--- a/federated_learning/server/config.json
+++ b/federated_learning/server/config.json
@@ -1,14 +1,6 @@
 {
-    "clientId": "1bee10b2-17dd-4a50-b8aa-488d27bdd5a1",
-    "clientSecret": "MZK8Q~M5oNATdagyRKMUs-V-2dNggq3aAlRRdb8W",
-    "subscriptionId": "092da66a-c312-4a87-8859-56031bb22656",
-    "tenantId": "6f0b9487-4fa8-42a8-aeb4-bf2e2c22d4e8",
-    "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",      
-    "resourceManagerEndpointUrl": "https://management.azure.com/",
-    "activeDirectoryGraphResourceId": "https://graph.windows.net/",
-    "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
-    "galleryEndpointUrl": "https://gallery.azure.com/",
-    "managementEndpointUrl": "https://management.core.windows.net/",
+    "subscription_id": "092da66a-c312-4a87-8859-56031bb22656",
+    "tenant_id": "6f0b9487-4fa8-42a8-aeb4-bf2e2c22d4e8",
     "resource_group": "assignment2-b00903995",
     "workspace_name": "assignment2-ML-workspace"
 }
