push-code-and-start-run

--- a/federated_learning/server/Dockerfile
+++ b/federated_learning/server/Dockerfile
@@ -4,8 +4,14 @@ WORKDIR /federated_learning/server
 
 COPY . /federated_learning/server
 
+RUN /usr/local/bin/python -m pip install --upgrade pip setuptools
+
+RUN /usr/local/bin/python -m pip install pyyaml
+
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+RUN /usr/local/bin/python -m pip install --no-build-isolation ruamel.yaml
 
 # Make port 8080 available to the world outside this container
 EXPOSE 8008
