--- a/federated_learning/server/server_job_staging.yml
+++ b/federated_learning/server/server_job_staging.yml
@@ -4,8 +4,8 @@ command: python server.py --trainingdata ${{ inputs.training_data }}
 inputs:
   training_data:
     type: uri_file
-    path: azureml:combined_data_sub1-9:1
-environment: azureml:development:4
+    path: azureml:subject2-4:2
+environment: azureml:development:15
 compute: azureml:compute-resources
 experiment_name: Fed-Learning-Server-Staging-Env
 description: This job is for deploying and running the federated learning server in the dev environment....
