--- a/.github/workflows/deploy_and_run.yml
+++ b/.github/workflows/deploy_and_run.yml
@@ -45,13 +45,18 @@ jobs:
         ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
       run: |
         echo $ACR_PASSWORD | docker login $ACR_NAME.azurecr.io -u $ACR_USERNAME --password-stdin
-
-    - name: Add ML Extension
-      run: az extension add --name ml
-
-
-    - name: Start Federated Learning Server
-      run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
     
+    - name: SSH into Azure ML Compute Instance
+      uses: appleboy/ssh-action@master
+      with:
+          host: ${{ secrets.COMPUTE_INSTANCE_IP }}
+          username: ${{ secrets.COMPUTE_INSTANCE_USERNAME }}
+          key: ${{ secrets.COMPUTE_INSTANCE_SSH_KEY }}
+          port: 50000
+          script: |
+              az login --identity --allow-no-subscriptions
+              az extension add --name ml
+              az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+
     - name: Start Run Clients
       run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
