--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -22,7 +22,19 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+    
+    - name: Docker Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./path/to/your/subdirectory  # Path to your Dockerfile and build context
+          push: true
+          tags: |
+            your-docker-registry/your-repo-name:latest
+            your-docker-registry/your-repo-name:${{ github.sha }}
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    
     - name: Log in to Azure Container Registry
       env:
         ACR_NAME: d208efad40c54644a94f9c0ee8d073c6
@@ -44,5 +56,5 @@ jobs:
         script: |
             az login --identity --allow-no-subscriptions
             docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
-            docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build python server.py --trainingdata combined_data_sub1-9
+            docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build python server.py --trainingdata subject2-4 --minimunmclients 3
             docker container ls -a
