--- a/.github/workflows/federated_learning_server_staging.yml
+++ b/.github/workflows/federated_learning_server_staging.yml
@@ -1,34 +1,34 @@
-run-name: Deploy Federated Learning Server Job
-on:
-  push:
-    branches:
-      - "staging"
-    paths:
-      - 'federated_learning/server/**'
-  pull_request:
-    branches:
-      - "staging"
-    paths:
-      - 'federated_learning/server/**'
-jobs:
-  testJob:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Hi! I'm running because of a ${{ github.event_name }} event. "
-      - run: echo "Checking out the repository from ${{ github.repository }}."
-      - name: Clone repository code
-        uses: actions/checkout@v4
-      - run: echo "Repository cloned, I think I'm ready. The files look like this:"
-      - name: List files
-        run:
-            ls ${{github.workspace}}
-      - name: log in to azure
-        uses: azure/login@v1
-        with:
-            creds: '${{secrets.AZURE_CREDENTIALS}}'
-      - name: Test azure login by getting details
-        run: az account show
-      - name: Add ML Extension
-        run: az extension add --name ml
-      - name: Deploy the jobs
-        run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+# run-name: Deploy Federated Learning Server Job
+# on:
+#   push:
+#     branches:
+#       - "staging"
+#     paths:
+#       - 'federated_learning/server/**'
+#   pull_request:
+#     branches:
+#       - "staging"
+#     paths:
+#       - 'federated_learning/server/**'
+# jobs:
+#   testJob:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - run: echo "Hi! I'm running because of a ${{ github.event_name }} event. "
+#       - run: echo "Checking out the repository from ${{ github.repository }}."
+#       - name: Clone repository code
+#         uses: actions/checkout@v4
+#       - run: echo "Repository cloned, I think I'm ready. The files look like this:"
+#       - name: List files
+#         run:
+#             ls ${{github.workspace}}
+#       - name: log in to azure
+#         uses: azure/login@v1
+#         with:
+#             creds: '${{secrets.AZURE_CREDENTIALS}}'
+#       - name: Test azure login by getting details
+#         run: az account show
+#       - name: Add ML Extension
+#         run: az extension add --name ml
+#       - name: Deploy the jobs
+#         run: az ml job create --file ${{github.workspace}}/federated_learning/server/server_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
