--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -35,7 +35,7 @@ jobs:
       run: az acr repository list --name d208efad40c54644a94f9c0ee8d073c6 --output table
     - name: Build and Push Docker Image
       run: |
-          docker build -t d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build .
+          docker build -t d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build ./federated_learning/server
           docker push d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build
 
     - name: SSH into Azure ML Compute Instance
