--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -4,12 +4,12 @@ on:
       branches:
         - "staging"
       paths:
-        - 'federated_learning/server/**'
+        - 'federated_learning/**'
     pull_request:
       branches:
         - "staging"
       paths:
-        - 'federated_learning/server/**'
+        - 'federated_learning/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -50,3 +50,7 @@ jobs:
             docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
             docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build python server.py --trainingdata subject2-4 --minimunmclients 3
             docker container ls -a
+    
+    - name: Start Run Clients
+      run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
+      
