updaet deploy job

--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -35,8 +35,8 @@ jobs:
       run: az acr repository list --name d208efad40c54644a94f9c0ee8d073c6 --output table
     - name: Build and Push Docker Image
       run: |
-          docker build -t d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build ./federated_learning/server
-          docker push d208efad40c54644a94f9c0ee8d073c6.azurecr.io/com774:server-build
+          docker build -t ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build ./federated_learning/server
+          docker push ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
 
     - name: SSH into Azure ML Compute Instance
       uses: appleboy/ssh-action@master
@@ -52,6 +52,8 @@ jobs:
             docker container ls -a
     - name: Add ML Extension
       run: az extension add --name ml
+      
     - name: Start Run Clients
       run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
-      
+    - name: Test azure login by getting details
+      run: az account show
