--- a/federated_learning/server/server_job_staging.yml
+++ b/federated_learning/server/server_job_staging.yml
@@ -8,4 +8,4 @@ inputs:
 environment: azureml:development:15
 compute: azureml:Fed-Server-Instance
 experiment_name: Fed-Learning-Server-Experiment
-description: This job is for deploying and running the federated learning server in the dev environment.....
+description: This job is for deploying and running the federated learning server in the dev environment......
