--- a/federated_learning/clients/run_client_job_staging.yml
+++ b/federated_learning/clients/run_client_job_staging.yml
@@ -3,6 +3,6 @@ code: .
 command: python run_client.py --total_subjects 4
 
 environment: azureml:development:15
-compute: azureml:Fed-Server-Instance
+compute: azureml:job-cluster
 experiment_name: Fed-Learning-Client-Staging-Env
 description: This job is for deploying the clients for the fed server job.....
