--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -64,10 +64,4 @@ jobs:
             docker pull ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build
             docker run -d -p 8080:80 --name Fed-Learning-server-container ${{ secrets.CONTAINER_REGISTRY_URL }}/com774:server-build --trainingdata subject2-4 --minimunmclients 3
             docker container ls -a
-    - name: Add ML Extension
-      run: az extension add --name ml
-      
-    - name: Start Run Clients
-      run: az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
-    - name: Test azure login by getting details
-      run: az account show
+            az ml job create --file ${{github.workspace}}/federated_learning/clients/run_client_job_staging.yml  --resource-group assignment2-b00903995 --workspace-name  assignment2-ML-workspace
