--- a/federated_learning/server/server_job_staging.yml
+++ b/federated_learning/server/server_job_staging.yml
@@ -6,6 +6,6 @@ inputs:
     type: uri_file
     path: azureml:subject2-4:2
 environment: azureml:development:15
-compute: azureml:job-cluster
+compute: azureml:Fed-Server-Instance
 experiment_name: Fed-Learning-Server-Experiment
 description: This job is for deploying and running the federated learning server in the dev environment....
