--- a/federated_learning/clients/run_client_job_staging.yml
+++ b/federated_learning/clients/run_client_job_staging.yml
@@ -1,8 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: .
 command: python run_client.py --total_subjects 4
-
 environment: azureml:development:15
-compute: azureml:job-cluster
+compute: azureml:Fed-Server-Instance
 experiment_name: Fed-Learning-Client-Staging-Env
 description: This job is for deploying the clients for the fed server job.....
